<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/firestore_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingVertical="10dp"
            android:text="@string/how_it_works"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_it_works"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:text="@string/enter_details_desc"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Session gets expired very quickly so you may have to login frequently"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Enter Pin Code"
            android:inputType="number"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/fee_type_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/free_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/free"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/paid_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paid"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/age_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="18+"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radio_45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="45+"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/vaccine_type_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/both_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/both"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/covishied_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covishield"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/covaxin_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covaxin"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </RadioGroup>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_slots" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/adUnitIdBanner" />
</LinearLayout>